--- a/QuizFE/index.html
+++ b/QuizFE/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://www.svgrepo.com/show/301092/evaluation-exam.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quiz</title>
+    <title>QuizWiz!</title>
   </head>
   <body>
     <div id="root"></div>
